[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/box.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/box_structure.gd" type="Script" id=2]
[ext_resource path="res://sound/Cube_adding.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/camera.gd" type="Script" id=4]
[ext_resource path="res://sound/Star_collect.wav" type="AudioStream" id=5]
[ext_resource path="res://sound/GameOver.wav" type="AudioStream" id=6]
[ext_resource path="res://sound/Move_L&R.ogg" type="AudioStream" id=7]
[ext_resource path="res://sound/precompleted.wav" type="AudioStream" id=8]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 0.694118, 0.694118, 0.694118, 1 )

[sub_resource type="ArrayMesh" id=3]
resource_name = "Background"
surfaces/0 = {
"aabb": AABB( -250, -176.777, -250, 500, 272.448, 250 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 161, 84, 158, 55, 252, 255, 121, 195, 0, 0, 127, 0, 129, 0, 0, 127, 197, 59, 100, 56, 35, 23, 67, 66, 161, 84, 158, 55, 62, 50, 117, 195, 232, 0, 124, 0, 132, 0, 232, 127, 191, 59, 100, 56, 126, 87, 63, 66, 33, 23, 67, 66, 32, 124, 112, 195, 232, 232, 122, 0, 132, 0, 232, 127, 191, 59, 205, 56, 0, 0, 0, 0, 33, 23, 67, 66, 62, 50, 117, 195, 0, 232, 124, 0, 129, 0, 0, 127, 197, 59, 205, 56, 0, 0, 0, 0, 24, 23, 67, 194, 63, 50, 117, 195, 0, 24, 124, 0, 130, 0, 0, 127, 197, 59, 248, 55, 127, 87, 63, 66, 24, 23, 67, 194, 33, 124, 112, 195, 232, 24, 122, 0, 132, 0, 232, 127, 191, 59, 248, 55, 20, 80, 133, 55, 118, 87, 191, 194, 62, 248, 102, 195, 0, 48, 117, 0, 129, 0, 0, 127, 197, 59, 38, 55, 114, 61, 52, 66, 118, 87, 191, 194, 37, 136, 98, 195, 234, 48, 115, 0, 132, 0, 232, 127, 191, 59, 38, 55, 5, 180, 142, 56, 126, 228, 10, 195, 253, 221, 79, 195, 0, 70, 105, 0, 129, 0, 0, 127, 197, 59, 84, 54, 53, 54, 34, 66, 126, 228, 10, 195, 141, 223, 75, 195, 236, 70, 103, 0, 132, 0, 232, 127, 191, 59, 84, 54, 11, 104, 32, 56, 213, 198, 48, 195, 204, 198, 48, 195, 0, 80, 98, 0, 130, 0, 0, 127, 197, 59, 131, 53, 35, 243, 9, 66, 213, 198, 48, 195, 67, 97, 45, 195, 237, 80, 96, 0, 132, 0, 232, 127, 191, 59, 131, 53, 113, 61, 52, 66, 123, 87, 191, 66, 36, 136, 98, 195, 233, 220, 119, 0, 132, 0, 232, 127, 191, 59, 54, 57, 0, 0, 0, 0, 123, 87, 191, 66, 70, 248, 102, 195, 0, 220, 121, 0, 129, 0, 0, 127, 197, 59, 54, 57, 74, 170, 187, 66, 33, 23, 67, 66, 35, 136, 98, 195, 209, 232, 115, 0, 139, 0, 208, 127, 184, 59, 205, 56, 216, 198, 176, 66, 123, 87, 191, 66, 102, 99, 85, 195, 210, 220, 112, 0, 139, 0, 208, 127, 184, 59, 54, 57, 126, 87, 191, 66, 161, 84, 158, 55, 69, 248, 102, 195, 208, 0, 117, 0, 139, 0, 208, 127, 184, 59, 100, 56, 74, 170, 187, 66, 24, 23, 67, 194, 35, 136, 98, 195, 209, 24, 115, 0, 139, 0, 208, 127, 184, 59, 248, 55, 217, 198, 176, 66, 118, 87, 191, 194, 103, 99, 85, 195, 212, 48, 108, 0, 139, 0, 208, 127, 184, 59, 38, 55, 74, 24, 159, 66, 126, 228, 10, 195, 92, 11, 64, 195, 216, 70, 97, 0, 139, 0, 208, 127, 184, 59, 84, 54, 145, 76, 135, 66, 213, 198, 48, 195, 0, 82, 35, 195, 219, 80, 90, 0, 139, 0, 208, 127, 184, 59, 131, 53, 80, 248, 230, 66, 126, 228, 10, 195, 219, 213, 44, 195, 198, 70, 87, 0, 151, 0, 186, 127, 177, 59, 84, 54, 237, 81, 0, 67, 118, 87, 191, 194, 92, 11, 64, 195, 191, 48, 97, 0, 151, 0, 186, 127, 177, 59, 38, 55, 128, 108, 196, 66, 213, 198, 48, 195, 1, 252, 18, 195, 202, 80, 81, 0, 151, 0, 186, 127, 177, 59, 131, 53, 75, 57, 8, 67, 33, 23, 67, 66, 138, 223, 75, 195, 187, 232, 103, 0, 151, 0, 186, 127, 177, 59, 205, 56, 237, 81, 0, 67, 123, 87, 191, 66, 91, 11, 64, 195, 189, 220, 101, 0, 151, 0, 186, 127, 177, 59, 54, 57, 130, 228, 10, 67, 161, 84, 158, 55, 9, 222, 79, 195, 186, 0, 105, 0, 151, 0, 186, 127, 177, 59, 100, 56, 75, 57, 8, 67, 24, 23, 67, 194, 138, 223, 75, 195, 187, 24, 103, 0, 151, 0, 186, 127, 177, 59, 248, 55, 217, 198, 48, 67, 161, 84, 158, 55, 208, 198, 48, 195, 167, 0, 89, 0, 167, 0, 167, 127, 171, 59, 100, 56, 73, 97, 45, 67, 33, 23, 67, 66, 64, 97, 45, 195, 168, 232, 88, 0, 167, 0, 167, 127, 171, 59, 205, 56, 73, 97, 45, 67, 24, 23, 67, 194, 64, 97, 45, 195, 168, 24, 88, 0, 167, 0, 167, 127, 171, 59, 248, 55, 6, 82, 35, 67, 118, 87, 191, 194, 0, 82, 35, 195, 173, 48, 83, 0, 167, 0, 167, 127, 171, 59, 38, 55, 8, 252, 18, 67, 126, 228, 10, 195, 0, 252, 18, 195, 182, 70, 74, 0, 167, 0, 167, 127, 171, 59, 84, 54, 6, 0, 250, 66, 213, 198, 48, 195, 248, 255, 249, 194, 187, 80, 69, 0, 167, 0, 167, 127, 171, 59, 131, 53, 6, 82, 35, 67, 123, 87, 191, 66, 255, 81, 35, 195, 171, 220, 85, 0, 167, 0, 167, 127, 171, 59, 54, 57, 8, 252, 18, 67, 213, 198, 48, 195, 113, 108, 196, 194, 175, 80, 54, 0, 186, 0, 151, 127, 164, 59, 131, 53, 226, 213, 44, 67, 126, 228, 10, 195, 64, 248, 230, 194, 169, 70, 58, 0, 186, 0, 151, 127, 164, 59, 84, 54, 146, 223, 75, 67, 33, 23, 67, 66, 66, 57, 8, 195, 153, 232, 69, 0, 186, 0, 151, 127, 164, 59, 205, 56, 99, 11, 64, 67, 123, 87, 191, 66, 230, 81, 0, 195, 155, 220, 67, 0, 186, 0, 151, 127, 164, 59, 54, 57, 18, 222, 79, 67, 161, 84, 158, 55, 121, 228, 10, 195, 151, 0, 70, 0, 186, 0, 151, 127, 164, 59, 100, 56, 146, 223, 75, 67, 24, 23, 67, 194, 66, 57, 8, 195, 153, 24, 69, 0, 186, 0, 151, 127, 164, 59, 248, 55, 99, 11, 64, 67, 118, 87, 191, 194, 231, 81, 0, 195, 159, 48, 65, 0, 186, 0, 151, 127, 164, 59, 38, 55, 78, 248, 102, 67, 161, 84, 158, 55, 111, 87, 191, 194, 139, 0, 48, 0, 208, 0, 139, 127, 157, 59, 100, 56, 41, 136, 98, 67, 33, 23, 67, 66, 56, 170, 187, 194, 141, 232, 47, 0, 208, 0, 139, 127, 157, 59, 205, 56, 41, 136, 98, 67, 24, 23, 67, 194, 56, 170, 187, 194, 141, 24, 47, 0, 208, 0, 139, 127, 157, 59, 248, 55, 109, 99, 85, 67, 118, 87, 191, 194, 206, 198, 176, 194, 148, 48, 44, 0, 208, 0, 139, 127, 157, 59, 38, 55, 100, 11, 64, 67, 126, 228, 10, 195, 59, 24, 159, 194, 159, 70, 40, 0, 208, 0, 139, 127, 157, 59, 84, 54, 7, 82, 35, 67, 213, 198, 48, 195, 131, 76, 135, 194, 166, 80, 37, 0, 208, 0, 139, 127, 157, 59, 131, 53, 109, 99, 85, 67, 123, 87, 191, 66, 204, 198, 176, 194, 144, 220, 46, 0, 208, 0, 139, 127, 157, 59, 54, 57, 74, 97, 45, 67, 213, 198, 48, 195, 11, 243, 9, 194, 160, 80, 19, 0, 232, 0, 132, 127, 151, 59, 131, 53, 147, 223, 75, 67, 126, 228, 10, 195, 26, 54, 34, 194, 153, 70, 20, 0, 232, 0, 132, 127, 151, 59, 84, 54, 38, 124, 112, 67, 33, 23, 67, 66, 95, 87, 63, 194, 134, 232, 24, 0, 232, 0, 132, 127, 151, 59, 205, 56, 42, 136, 98, 67, 123, 87, 191, 66, 91, 61, 52, 194, 137, 220, 23, 0, 232, 0, 132, 127, 151, 59, 54, 57, 69, 50, 117, 67, 161, 84, 158, 55, 7, 23, 67, 194, 132, 0, 24, 0, 232, 0, 132, 127, 151, 59, 100, 56, 38, 124, 112, 67, 24, 23, 67, 194, 95, 87, 63, 194, 134, 24, 24, 0, 232, 0, 132, 127, 151, 59, 248, 55, 42, 136, 98, 67, 118, 87, 191, 194, 94, 61, 52, 194, 141, 48, 22, 0, 232, 0, 132, 127, 151, 59, 38, 55, 66, 50, 117, 67, 24, 23, 67, 194, 82, 104, 206, 56, 132, 24, 12, 0, 244, 0, 130, 127, 144, 59, 248, 55, 4, 0, 122, 67, 161, 84, 158, 55, 82, 152, 198, 56, 130, 0, 12, 0, 244, 0, 130, 127, 144, 59, 100, 56, 77, 248, 102, 67, 118, 87, 191, 194, 166, 240, 112, 56, 140, 48, 11, 0, 244, 0, 130, 127, 144, 59, 38, 55, 17, 222, 79, 67, 126, 228, 10, 195, 82, 40, 175, 56, 151, 69, 10, 0, 244, 0, 130, 127, 144, 59, 84, 54, 216, 198, 48, 67, 213, 198, 48, 195, 82, 88, 167, 56, 159, 80, 9, 0, 244, 0, 130, 127, 144, 59, 131, 53, 66, 50, 117, 67, 33, 23, 67, 66, 82, 104, 206, 56, 132, 232, 12, 0, 244, 0, 130, 127, 144, 59, 205, 56, 77, 248, 102, 67, 123, 87, 191, 66, 83, 232, 143, 56, 136, 220, 11, 0, 244, 0, 130, 127, 144, 59, 54, 57, 73, 248, 102, 195, 118, 87, 191, 194, 82, 88, 167, 56, 116, 48, 11, 0, 244, 0, 126, 127, 250, 59, 38, 55, 38, 136, 98, 195, 118, 87, 191, 194, 86, 61, 52, 194, 115, 48, 22, 0, 232, 0, 124, 127, 244, 59, 38, 55, 28, 124, 112, 195, 24, 23, 67, 194, 108, 87, 63, 194, 122, 24, 24, 0, 232, 0, 124, 127, 244, 59, 248, 55, 59, 50, 117, 195, 24, 23, 67, 194, 81, 161, 200, 55, 124, 24, 12, 0, 244, 0, 126, 127, 250, 59, 248, 55, 8, 222, 79, 195, 126, 228, 10, 195, 168, 48, 19, 56, 105, 69, 10, 0, 244, 0, 126, 127, 250, 59, 84, 54, 136, 223, 75, 195, 126, 228, 10, 195, 32, 54, 34, 194, 103, 70, 20, 0, 232, 0, 124, 127, 244, 59, 84, 54, 212, 198, 48, 195, 213, 198, 48, 195, 167, 16, 66, 56, 97, 80, 9, 0, 244, 0, 126, 127, 250, 59, 131, 53, 69, 97, 45, 195, 213, 198, 48, 195, 16, 243, 9, 194, 96, 80, 19, 0, 232, 0, 124, 127, 244, 59, 131, 53, 59, 50, 117, 195, 33, 23, 67, 66, 81, 161, 200, 55, 124, 232, 12, 0, 244, 0, 126, 127, 250, 59, 205, 56, 28, 124, 112, 195, 33, 23, 67, 66, 108, 87, 63, 194, 122, 232, 24, 0, 232, 0, 124, 127, 244, 59, 205, 56, 38, 136, 98, 195, 123, 87, 191, 66, 86, 61, 52, 194, 119, 220, 23, 0, 232, 0, 124, 127, 244, 59, 54, 57, 73, 248, 102, 195, 123, 87, 191, 66, 82, 88, 167, 56, 120, 220, 11, 0, 244, 0, 126, 127, 250, 59, 54, 57, 253, 255, 121, 195, 161, 84, 158, 55, 168, 48, 19, 56, 126, 0, 12, 0, 244, 0, 126, 127, 250, 59, 100, 56, 62, 50, 117, 195, 161, 84, 158, 55, 18, 23, 67, 194, 124, 0, 24, 0, 232, 0, 124, 127, 244, 59, 100, 56, 30, 136, 98, 195, 33, 23, 67, 66, 57, 170, 187, 194, 115, 232, 47, 0, 208, 0, 117, 127, 237, 59, 205, 56, 105, 99, 85, 195, 123, 87, 191, 66, 200, 198, 176, 194, 112, 220, 46, 0, 208, 0, 117, 127, 237, 59, 54, 57, 69, 248, 102, 195, 161, 84, 158, 55, 113, 87, 191, 194, 117, 0, 48, 0, 208, 0, 117, 127, 237, 59, 100, 56, 30, 136, 98, 195, 24, 23, 67, 194, 57, 170, 187, 194, 115, 24, 47, 0, 208, 0, 117, 127, 237, 59, 248, 55, 105, 99, 85, 195, 118, 87, 191, 194, 200, 198, 176, 194, 108, 48, 44, 0, 208, 0, 117, 127, 237, 59, 38, 55, 88, 11, 64, 195, 126, 228, 10, 195, 58, 24, 159, 194, 97, 70, 40, 0, 208, 0, 117, 127, 237, 59, 84, 54, 1, 82, 35, 195, 213, 198, 48, 195, 132, 76, 135, 194, 90, 80, 37, 0, 208, 0, 117, 127, 237, 59, 131, 53, 215, 213, 44, 195, 126, 228, 10, 195, 58, 248, 230, 194, 87, 70, 58, 0, 186, 0, 105, 127, 230, 59, 84, 54, 94, 11, 64, 195, 118, 87, 191, 194, 227, 81, 0, 195, 97, 48, 65, 0, 186, 0, 105, 127, 230, 59, 38, 55, 3, 252, 18, 195, 213, 198, 48, 195, 111, 108, 196, 194, 81, 80, 54, 0, 186, 0, 105, 127, 230, 59, 131, 53, 134, 223, 75, 195, 33, 23, 67, 66, 65, 57, 8, 195, 103, 232, 69, 0, 186, 0, 105, 127, 230, 59, 205, 56, 94, 11, 64, 195, 123, 87, 191, 66, 227, 81, 0, 195, 101, 220, 67, 0, 186, 0, 105, 127, 230, 59, 54, 57, 8, 222, 79, 195, 161, 84, 158, 55, 120, 228, 10, 195, 105, 0, 70, 0, 186, 0, 105, 127, 230, 59, 100, 56, 134, 223, 75, 195, 24, 23, 67, 194, 65, 57, 8, 195, 103, 24, 69, 0, 186, 0, 105, 127, 230, 59, 248, 55, 206, 198, 48, 195, 161, 84, 158, 55, 205, 198, 48, 195, 89, 0, 89, 0, 167, 0, 89, 127, 224, 59, 100, 56, 61, 97, 45, 195, 33, 23, 67, 66, 58, 97, 45, 195, 88, 232, 88, 0, 167, 0, 89, 127, 224, 59, 205, 56, 61, 97, 45, 195, 24, 23, 67, 194, 58, 97, 45, 195, 88, 24, 88, 0, 167, 0, 89, 127, 224, 59, 248, 55, 2, 82, 35, 195, 118, 87, 191, 194, 251, 81, 35, 195, 83, 48, 83, 0, 167, 0, 89, 127, 224, 59, 38, 55, 253, 251, 18, 195, 126, 228, 10, 195, 251, 251, 18, 195, 74, 70, 74, 0, 167, 0, 89, 127, 224, 59, 84, 54, 251, 255, 249, 194, 213, 198, 48, 195, 243, 255, 249, 194, 69, 80, 69, 0, 167, 0, 89, 127, 224, 59, 131, 53, 2, 82, 35, 195, 123, 87, 191, 66, 251, 81, 35, 195, 85, 220, 85, 0, 167, 0, 89, 127, 224, 59, 54, 57, 116, 108, 196, 194, 213, 198, 48, 195, 253, 251, 18, 195, 54, 80, 81, 0, 151, 0, 70, 127, 217, 59, 131, 53, 59, 248, 230, 194, 126, 228, 10, 195, 211, 213, 44, 195, 58, 70, 87, 0, 151, 0, 70, 127, 217, 59, 84, 54, 65, 57, 8, 195, 33, 23, 67, 66, 129, 223, 75, 195, 69, 232, 103, 0, 151, 0, 70, 127, 217, 59, 205, 56, 233, 81, 0, 195, 123, 87, 191, 66, 86, 11, 64, 195, 67, 220, 101, 0, 151, 0, 70, 127, 217, 59, 54, 57, 120, 228, 10, 195, 161, 84, 158, 55, 3, 222, 79, 195, 70, 0, 105, 0, 151, 0, 70, 127, 217, 59, 100, 56, 65, 57, 8, 195, 24, 23, 67, 194, 129, 223, 75, 195, 69, 24, 103, 0, 151, 0, 70, 127, 217, 59, 248, 55, 233, 81, 0, 195, 118, 87, 191, 194, 86, 11, 64, 195, 65, 48, 97, 0, 151, 0, 70, 127, 217, 59, 38, 55, 110, 87, 191, 194, 161, 84, 158, 55, 60, 248, 102, 195, 48, 0, 117, 0, 139, 0, 48, 127, 210, 59, 100, 56, 55, 170, 187, 194, 33, 23, 67, 66, 23, 136, 98, 195, 47, 232, 115, 0, 139, 0, 48, 127, 210, 59, 205, 56, 55, 170, 187, 194, 24, 23, 67, 194, 23, 136, 98, 195, 47, 24, 115, 0, 139, 0, 48, 127, 210, 59, 248, 55, 210, 198, 176, 194, 118, 87, 191, 194, 96, 99, 85, 195, 44, 48, 108, 0, 139, 0, 48, 127, 210, 59, 38, 55, 56, 24, 159, 194, 126, 228, 10, 195, 82, 11, 64, 195, 40, 70, 97, 0, 139, 0, 48, 127, 210, 59, 84, 54, 135, 76, 135, 194, 213, 198, 48, 195, 252, 81, 35, 195, 37, 80, 90, 0, 139, 0, 48, 127, 210, 59, 131, 53, 210, 198, 176, 194, 123, 87, 191, 66, 96, 99, 85, 195, 46, 220, 112, 0, 139, 0, 48, 127, 210, 59, 54, 57, 20, 243, 9, 194, 213, 198, 48, 195, 61, 97, 45, 195, 19, 80, 96, 0, 132, 0, 24, 127, 204, 59, 131, 53, 25, 54, 34, 194, 126, 228, 10, 195, 128, 223, 75, 195, 20, 70, 103, 0, 132, 0, 24, 127, 204, 59, 84, 54, 98, 87, 63, 194, 33, 23, 67, 66, 18, 124, 112, 195, 24, 232, 122, 0, 132, 0, 24, 127, 204, 59, 205, 56, 104, 61, 52, 194, 123, 87, 191, 66, 29, 136, 98, 195, 23, 220, 119, 0, 132, 0, 24, 127, 204, 59, 54, 57, 9, 23, 67, 194, 161, 84, 158, 55, 50, 50, 117, 195, 24, 0, 124, 0, 132, 0, 24, 127, 204, 59, 100, 56, 98, 87, 63, 194, 24, 23, 67, 194, 18, 124, 112, 195, 24, 24, 122, 0, 132, 0, 24, 127, 204, 59, 248, 55, 104, 61, 52, 194, 118, 87, 191, 194, 29, 136, 98, 195, 22, 48, 115, 0, 132, 0, 24, 127, 204, 59, 38, 55 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 8, 0, 7, 0, 9, 0, 8, 0, 6, 0, 7, 0, 10, 0, 9, 0, 11, 0, 10, 0, 8, 0, 9, 0, 3, 0, 12, 0, 2, 0, 3, 0, 13, 0, 12, 0, 2, 0, 15, 0, 14, 0, 2, 0, 12, 0, 15, 0, 1, 0, 14, 0, 16, 0, 1, 0, 2, 0, 14, 0, 5, 0, 16, 0, 17, 0, 5, 0, 1, 0, 16, 0, 7, 0, 17, 0, 18, 0, 7, 0, 5, 0, 17, 0, 9, 0, 18, 0, 19, 0, 9, 0, 7, 0, 18, 0, 11, 0, 19, 0, 20, 0, 11, 0, 9, 0, 19, 0, 19, 0, 22, 0, 21, 0, 19, 0, 18, 0, 22, 0, 20, 0, 21, 0, 23, 0, 20, 0, 19, 0, 21, 0, 14, 0, 25, 0, 24, 0, 14, 0, 15, 0, 25, 0, 16, 0, 24, 0, 26, 0, 16, 0, 14, 0, 24, 0, 17, 0, 26, 0, 27, 0, 17, 0, 16, 0, 26, 0, 18, 0, 27, 0, 22, 0, 18, 0, 17, 0, 27, 0, 26, 0, 29, 0, 28, 0, 26, 0, 24, 0, 29, 0, 27, 0, 28, 0, 30, 0, 27, 0, 26, 0, 28, 0, 22, 0, 30, 0, 31, 0, 22, 0, 27, 0, 30, 0, 21, 0, 31, 0, 32, 0, 21, 0, 22, 0, 31, 0, 23, 0, 32, 0, 33, 0, 23, 0, 21, 0, 32, 0, 24, 0, 34, 0, 29, 0, 24, 0, 25, 0, 34, 0, 33, 0, 36, 0, 35, 0, 33, 0, 32, 0, 36, 0, 29, 0, 38, 0, 37, 0, 29, 0, 34, 0, 38, 0, 28, 0, 37, 0, 39, 0, 28, 0, 29, 0, 37, 0, 30, 0, 39, 0, 40, 0, 30, 0, 28, 0, 39, 0, 31, 0, 40, 0, 41, 0, 31, 0, 30, 0, 40, 0, 32, 0, 41, 0, 36, 0, 32, 0, 31, 0, 41, 0, 39, 0, 43, 0, 42, 0, 39, 0, 37, 0, 43, 0, 40, 0, 42, 0, 44, 0, 40, 0, 39, 0, 42, 0, 41, 0, 44, 0, 45, 0, 41, 0, 40, 0, 44, 0, 36, 0, 45, 0, 46, 0, 36, 0, 41, 0, 45, 0, 35, 0, 46, 0, 47, 0, 35, 0, 36, 0, 46, 0, 37, 0, 48, 0, 43, 0, 37, 0, 38, 0, 48, 0, 47, 0, 50, 0, 49, 0, 47, 0, 46, 0, 50, 0, 43, 0, 52, 0, 51, 0, 43, 0, 48, 0, 52, 0, 42, 0, 51, 0, 53, 0, 42, 0, 43, 0, 51, 0, 44, 0, 53, 0, 54, 0, 44, 0, 42, 0, 53, 0, 45, 0, 54, 0, 55, 0, 45, 0, 44, 0, 54, 0, 46, 0, 55, 0, 50, 0, 46, 0, 45, 0, 55, 0, 54, 0, 57, 0, 56, 0, 54, 0, 53, 0, 57, 0, 55, 0, 56, 0, 58, 0, 55, 0, 54, 0, 56, 0, 50, 0, 58, 0, 59, 0, 50, 0, 55, 0, 58, 0, 49, 0, 59, 0, 60, 0, 49, 0, 50, 0, 59, 0, 51, 0, 62, 0, 61, 0, 51, 0, 52, 0, 62, 0, 53, 0, 61, 0, 57, 0, 53, 0, 51, 0, 61, 0, 63, 0, 65, 0, 64, 0, 63, 0, 66, 0, 65, 0, 67, 0, 64, 0, 68, 0, 67, 0, 63, 0, 64, 0, 69, 0, 68, 0, 70, 0, 69, 0, 67, 0, 68, 0, 71, 0, 73, 0, 72, 0, 71, 0, 74, 0, 73, 0, 75, 0, 72, 0, 76, 0, 75, 0, 71, 0, 72, 0, 66, 0, 76, 0, 65, 0, 66, 0, 75, 0, 76, 0, 72, 0, 78, 0, 77, 0, 72, 0, 73, 0, 78, 0, 76, 0, 77, 0, 79, 0, 76, 0, 72, 0, 77, 0, 65, 0, 79, 0, 80, 0, 65, 0, 76, 0, 79, 0, 64, 0, 80, 0, 81, 0, 64, 0, 65, 0, 80, 0, 68, 0, 81, 0, 82, 0, 68, 0, 64, 0, 81, 0, 70, 0, 82, 0, 83, 0, 70, 0, 68, 0, 82, 0, 82, 0, 85, 0, 84, 0, 82, 0, 81, 0, 85, 0, 83, 0, 84, 0, 86, 0, 83, 0, 82, 0, 84, 0, 77, 0, 88, 0, 87, 0, 77, 0, 78, 0, 88, 0, 79, 0, 87, 0, 89, 0, 79, 0, 77, 0, 87, 0, 80, 0, 89, 0, 90, 0, 80, 0, 79, 0, 89, 0, 81, 0, 90, 0, 85, 0, 81, 0, 80, 0, 90, 0, 89, 0, 92, 0, 91, 0, 89, 0, 87, 0, 92, 0, 90, 0, 91, 0, 93, 0, 90, 0, 89, 0, 91, 0, 85, 0, 93, 0, 94, 0, 85, 0, 90, 0, 93, 0, 84, 0, 94, 0, 95, 0, 84, 0, 85, 0, 94, 0, 86, 0, 95, 0, 96, 0, 86, 0, 84, 0, 95, 0, 87, 0, 97, 0, 92, 0, 87, 0, 88, 0, 97, 0, 96, 0, 99, 0, 98, 0, 96, 0, 95, 0, 99, 0, 92, 0, 101, 0, 100, 0, 92, 0, 97, 0, 101, 0, 91, 0, 100, 0, 102, 0, 91, 0, 92, 0, 100, 0, 93, 0, 102, 0, 103, 0, 93, 0, 91, 0, 102, 0, 94, 0, 103, 0, 104, 0, 94, 0, 93, 0, 103, 0, 95, 0, 104, 0, 99, 0, 95, 0, 94, 0, 104, 0, 102, 0, 106, 0, 105, 0, 102, 0, 100, 0, 106, 0, 103, 0, 105, 0, 107, 0, 103, 0, 102, 0, 105, 0, 104, 0, 107, 0, 108, 0, 104, 0, 103, 0, 107, 0, 99, 0, 108, 0, 109, 0, 99, 0, 104, 0, 108, 0, 98, 0, 109, 0, 110, 0, 98, 0, 99, 0, 109, 0, 100, 0, 111, 0, 106, 0, 100, 0, 101, 0, 111, 0, 110, 0, 113, 0, 112, 0, 110, 0, 109, 0, 113, 0, 106, 0, 115, 0, 114, 0, 106, 0, 111, 0, 115, 0, 105, 0, 114, 0, 116, 0, 105, 0, 106, 0, 114, 0, 107, 0, 116, 0, 117, 0, 107, 0, 105, 0, 116, 0, 108, 0, 117, 0, 118, 0, 108, 0, 107, 0, 117, 0, 109, 0, 118, 0, 113, 0, 109, 0, 108, 0, 118, 0, 117, 0, 0, 0, 4, 0, 117, 0, 116, 0, 0, 0, 118, 0, 4, 0, 6, 0, 118, 0, 117, 0, 4, 0, 113, 0, 6, 0, 8, 0, 113, 0, 118, 0, 6, 0, 112, 0, 8, 0, 10, 0, 112, 0, 113, 0, 8, 0, 114, 0, 13, 0, 3, 0, 114, 0, 115, 0, 13, 0, 116, 0, 3, 0, 0, 0, 116, 0, 114, 0, 3, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 576,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 119
}

[sub_resource type="StreamTexture" id=4]
flags = 7
load_path = "res://.import/Texture1_CityOverview.png-48d7b12ab7e98887ea485986f1d06334.s3tc.stex"

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = SubResource( 4 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 160, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 5, 0, -17.5 ), Vector3( 0, 0, -35 ) ]
}

[node name="box_structure" type="Spatial"]
script = ExtResource( 2 )

[node name="moving_camera" type="RigidBody" parent="."]
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="moving_camera"]
transform = Transform( 0.985455, 7.70933e-08, 0.169934, -0.0301161, 0.984171, 0.174644, -0.167244, -0.177222, 0.969857, 0, 0, 0 )
environment = SubResource( 2 )
far = 200.0

[node name="Background" type="MeshInstance" parent="moving_camera/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="moving_camera"]
anims/rotatecam = SubResource( 6 )

[node name="Tween" type="Tween" parent="moving_camera"]

[node name="main_box" parent="." instance=ExtResource( 1 )]
mode = 2
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
main = true

[node name="pass_structure_shrink_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -7.0

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -7.0
